Commit ya desplegando la consulta

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>CRUD FROM API</title>
+    <title>CRUD de autores</title>
 
     <link href="index.css" rel="stylesheet">
 </head>
@@ -25,7 +25,7 @@
 
     <div class="container">
         <div class="d-flex bd-highlight mb-3">
-            <div class="me-auto p-2 bd-highlight">
+            <div class="me-auto p-2 bd-highlight" id="Autores">
                 <h2>Autores</h2>
             </div>
             <div class="p-2 bd-highlight">
@@ -52,6 +52,8 @@
         </div>
     </div>
 
+
+    <!-- <script>document.getElementById("Autores").innerHTML = "<h2>Principio</h2>"</script> -->
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
