Commit con avance en la  programación de actualización de autores

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-dark bg-mynav">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">My App</a>
+            <a class="navbar-brand" href="#">CRUD</a>
         </div>
     </nav>
 
@@ -40,12 +40,12 @@
                         <th scope="col">#</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Apellidos</th>
-                        <th scope="col">Action</th>
+                        <th scope="col">Acción</th>
                     </tr>
                 </thead>
                 <tbody id="mytable">
                     <tr>
-                        <th scope="row" colspan="5">Loading...</th>
+                        <th scope="row" colspan="4">Loading...</th>
                     </tr>
                 </tbody>
             </table>
