Solo falta actualizar el row en el DOM

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="table-responsive">
-            <table class="table">
+            <table class="table" id="tabla">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
